--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
         <li><a href="#faq">よくある質問</a></li>
       </ul>
       <ul class="grid">
-        <li><a href="news">お知らせ</a></li>
-        <li><a href="contact">お問い合わせ</a></li>
+        <li><a href="#news">お知らせ</a></li>
+        <li><a href="#contact">お問い合わせ</a></li>
       </ul>
       <ul class="grid last">
         <li><a href="">利用規約</a></li>
